--- a/WhitbyWoodToolbar/WhitbyWoodToolbar.csproj
+++ b/WhitbyWoodToolbar/WhitbyWoodToolbar.csproj
@@ -62,6 +62,7 @@
     <Compile Include="CannotFindFileVM.cs" />
     <Compile Include="CheckDynamo.cs" />
     <Compile Include="CommandHandler.cs" />
+    <Compile Include="CommandHandlerWithString.cs" />
     <Compile Include="ContinueLooking.xaml.cs">
       <DependentUpon>ContinueLooking.xaml</DependentUpon>
     </Compile>
@@ -108,6 +109,10 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="resources\WhitbyWood.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="resources\dwgpdf.png" />
+    <Resource Include="resources\DynamoCheck.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
