--- a/WhitbyWoodToolbar/WhitbyWoodToolbar.csproj
+++ b/WhitbyWoodToolbar/WhitbyWoodToolbar.csproj
@@ -79,6 +79,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="resources\WWRevitToolbarInstaller.nsi" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="resources\image.jpg">
