--- a/WhitbyWoodToolbar/WhitbyWoodToolbar.csproj
+++ b/WhitbyWoodToolbar/WhitbyWoodToolbar.csproj
@@ -122,6 +122,7 @@
 xcopy "$(ProjectDir)resources\WWRevitToolbarInstaller.nsi" "$(TargetDir)" /Y
 mkdir "$(TargetDir)WWToolbar" /Y
 xcopy "$(TargetPath)" "$(TargetDir)WWToolbar" /Y
+xcopy "$(TargetDir)Newtonsoft.Json.dll" "$(TargetDir)WWToolbar" /Y
 "C:\Program Files (x86)\NSIS\makensis.exe" "$(TargetDir)WWRevitToolbarInstaller.nsi"</PostBuildEvent>
   </PropertyGroup>
 </Project>
