--- a/WhitbyWoodToolbar/packages.config
+++ b/WhitbyWoodToolbar/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="LiveCharts" version="0.9.7" targetFramework="net461" />
+  <package id="LiveCharts.Wpf" version="0.9.7" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net461" />
   <package id="Revit.RevitApi.x64" version="2018.0.0" targetFramework="net461" />
   <package id="Revit.RevitApiUI.x64" version="2018.0.0" targetFramework="net461" />
