--- a/WhitbyWoodToolbar/MagmaWorksToolbar.csproj
+++ b/WhitbyWoodToolbar/MagmaWorksToolbar.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{A6C93BB7-E581-47DD-B936-26245CF6F49E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>WhitbyWoodToolbar</RootNamespace>
-    <AssemblyName>WhitbyWoodToolbar</AssemblyName>
+    <RootNamespace>MagmaWorksToolbar</RootNamespace>
+    <AssemblyName>MagmaWorksToolbar</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -94,13 +94,13 @@
       <DependentUpon>UserControl1.xaml</DependentUpon>
     </Compile>
     <Compile Include="ViewModelBase.cs" />
-    <Compile Include="WWBatchPrint.cs" />
+    <Compile Include="BatchPrint.cs" />
     <Compile Include="WWCheckDynamo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-    <None Include="resources\WWRevitToolbarInstaller.nsi" />
-    <None Include="resources\WWToolbar.addin" />
+    <None Include="resources\MagmaWorksRevitToolbarInstaller.nsi" />
+    <None Include="resources\MagmaWorksToolbar.addin" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="resources\image.jpg">
@@ -143,15 +143,18 @@
   <ItemGroup>
     <Resource Include="resources\MagmaWorks_logo.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="resources\CarbonCalculator.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>xcopy "$(ProjectDir)resources\WWToolbar.addin" "$(TargetDir)" /Y
-xcopy "$(ProjectDir)resources\WWRevitToolbarInstaller.nsi" "$(TargetDir)" /Y
-mkdir "$(TargetDir)WWToolbar" /Y
-xcopy "$(TargetPath)" "$(TargetDir)WWToolbar" /Y
-xcopy "$(TargetDir)Newtonsoft.Json.dll" "$(TargetDir)WWToolbar" /Y
-xcopy "$(TargetDir)LiveCharts.Wpf.dll" "$(TargetDir)WWToolbar" /Y
-xcopy "$(TargetDir)LiveCharts.dll" "$(TargetDir)WWToolbar" /Y
-"C:\Program Files (x86)\NSIS\makensis.exe" "$(TargetDir)WWRevitToolbarInstaller.nsi"</PostBuildEvent>
+    <PostBuildEvent>xcopy "$(ProjectDir)resources\MagmaWorksToolbar.addin" "$(TargetDir)" /Y
+xcopy "$(ProjectDir)resources\MagmaWorksRevitToolbarInstaller.nsi" "$(TargetDir)" /Y
+mkdir "$(TargetDir)MagmaWorksToolbar" /Y
+xcopy "$(TargetPath)" "$(TargetDir)MagmaWorksToolbar" /Y
+xcopy "$(TargetDir)Newtonsoft.Json.dll" "$(TargetDir)MagmaWorksToolbar" /Y
+xcopy "$(TargetDir)LiveCharts.Wpf.dll" "$(TargetDir)MagmaWorksToolbar" /Y
+xcopy "$(TargetDir)LiveCharts.dll" "$(TargetDir)MagmaWorksToolbar" /Y
+"C:\Program Files (x86)\NSIS\makensis.exe" "$(TargetDir)MagmaWorksRevitToolbarInstaller.nsi"</PostBuildEvent>
   </PropertyGroup>
 </Project>
