--- a/MagmaWorksToolbar/MagmaWorksToolbar.csproj
+++ b/MagmaWorksToolbar/MagmaWorksToolbar.csproj
@@ -99,7 +99,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-    <None Include="resources\MagmaWorksRevitToolbarInstaller.nsi" />
+    <None Include="resources\MagmaWorksRevitToolbarInstaller2019.nsi" />
+    <None Include="resources\MagmaWorksRevitToolbarInstaller2018.nsi" />
     <None Include="resources\MagmaWorksToolbar.addin" />
   </ItemGroup>
   <ItemGroup>
@@ -149,12 +150,14 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>xcopy "$(ProjectDir)resources\MagmaWorksToolbar.addin" "$(TargetDir)" /Y
-xcopy "$(ProjectDir)resources\MagmaWorksRevitToolbarInstaller.nsi" "$(TargetDir)" /Y
+xcopy "$(ProjectDir)resources\MagmaWorksRevitToolbarInstaller2018.nsi" "$(TargetDir)" /Y
+xcopy "$(ProjectDir)resources\MagmaWorksRevitToolbarInstaller2019.nsi" "$(TargetDir)" /Y
 mkdir "$(TargetDir)MagmaWorksToolbar" /Y
 xcopy "$(TargetPath)" "$(TargetDir)MagmaWorksToolbar" /Y
 xcopy "$(TargetDir)Newtonsoft.Json.dll" "$(TargetDir)MagmaWorksToolbar" /Y
 xcopy "$(TargetDir)LiveCharts.Wpf.dll" "$(TargetDir)MagmaWorksToolbar" /Y
 xcopy "$(TargetDir)LiveCharts.dll" "$(TargetDir)MagmaWorksToolbar" /Y
-"C:\Program Files (x86)\NSIS\makensis.exe" "$(TargetDir)MagmaWorksRevitToolbarInstaller.nsi"</PostBuildEvent>
+"C:\Program Files (x86)\NSIS\makensis.exe" "$(TargetDir)MagmaWorksRevitToolbarInstaller2018.nsi"
+"C:\Program Files (x86)\NSIS\makensis.exe" "$(TargetDir)MagmaWorksRevitToolbarInstaller2019.nsi"</PostBuildEvent>
   </PropertyGroup>
 </Project>
